add link to original pdf

--- a/index.html
+++ b/index.html
@@ -5,24 +5,6 @@
     <meta charset="UTF-8">
     <title>RC6GS V2 Инструкция (RU)</title>
     <link rel="stylesheet" href="style.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function () {
-
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > 100) {
-                    $('.scroll-up').fadeIn();
-                } else {
-                    $('.scroll-up').fadeOut();
-                }
-            });
-
-            $('.scroll-up').click(function () {
-                $("html, body").animate({scrollTop: 0}, 600);
-                return false;
-            });
-        });
-    </script>
 </head>
 
 <body class="body">
@@ -561,9 +543,14 @@
             </p>
         </div>
     </section>
+
+    <section class="box link">
+        <a href="doc/RC6GS_V2_User_Manual_2021.7.29.pdf" target="_blank">
+            RC6GS V2 User Manual 2021.7.29.pdf
+        </a>
+    </section>
 </main>
 
-<a href="#" class="scroll-up">Наверх</a>
 </body>
 
 </html>
