--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         </div>
         <div class="menu-description">
             <p>
-                Меню доступно на английском и на китайском языке. Цифры внизу означают текущую версию прошивки. Например
-                V6.1.0.
+                Меню доступно на английском и на китайском языке. Цифры внизу указывают на текущую версию прошивки.
+                Например V6.1.0 как на картинке ниже.
             </p>
+            <img src="img/language.png" alt="language" class="menu-image">
         </div>
     </section>
 
