--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <div class="menu-description">
             <p>
                 RC6GS V2 может хранить в памяти десять моделей. Каждая модель сохраняется под своим уникальным именем
-                (см. пункт меню «NAME»).
+                (см. пункт меню «18. NAME»).
             </p>
+            <img src="img/model.png" alt="model" class="menu-image">
         </div>
     </section>
 
